# docs/swagger/polaris-api.json
@@ -184,6 +184,134 @@
                 ]
             }
         },
+        "/users": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "List existing user accounts",
+                "operationId": "getUsers",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/User"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "admin_http_header": [],
+                        "admin_cookie": []
+                    }
+                ]
+            }
+        },
+        "/user": {
+            "post": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Creates a new user account",
+                "operationId": "postUser",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#components/schemas/NewUser"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "admin_http_header": [],
+                        "admin_cookie": []
+                    }
+                ]
+            }
+        },
+        "/user/{name}": {
+            "put": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Updates properties of an existing user",
+                "operationId": "putUserName",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "description": "Name of the affected user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#components/schemas/UserUpdate"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "admin_http_header": [],
+                        "admin_cookie": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Deletes an existing user",
+                "operationId": "deleteUserName",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "path",
+                        "description": "Name of the affected user",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "admin_http_header": [],
+                        "admin_cookie": []
+                    }
+                ]
+            }
+        },
         "/preferences": {
             "get": {
                 "tags": [
@@ -928,10 +1056,14 @@
                     "name": {
                         "type": "string"
                     },
-                    "admin": {
+                    "is_admin": {
                         "type": "boolean"
                     }
-                }
+                },
+                "required": [
+                    "name",
+                    "is_admin"
+                ]
             },
             "NewUser": {
                 "type": "object",
@@ -942,7 +1074,23 @@
                     "password": {
                         "type": "string"
                     },
-                    "admin": {
+                    "is_admin": {
+                        "type": "boolean"
+                    }
+                },
+                "required": [
+                    "name",
+                    "password",
+                    "is_admin"
+                ]
+            },
+            "UserUpdate": {
+                "type": "object",
+                "properties": {
+                    "password": {
+                        "type": "string"
+                    },
+                    "is_admin": {
                         "type": "boolean"
                     }
                 }
